# rugby

./: .gitignore  CREDITS.md  Cargo.toml  Justfile  PRIVACY.md  README.md  STYLE.md  cliff.toml  clippy.toml  committed.toml  deny.toml  justfile  package.json  rustfmt.toml  typos.toml
apis/gbd/: Cargo.toml  README.md
apis/gbd/src/: exec.rs  lib.rs
apis/gbd/src/lang/: mod.rs  parse.pest  parse.rs
apps/cli/: Cargo.toml  README.md  build.rs  rugby.toml
apps/cli/docs/: config.toml
apps/cli/src/: app.rs  cfg.rs  cli.rs  def.rs  dir.rs  drop.rs  err.rs  init.rs  log.rs  main.rs  opt.rs  talk.rs  util.rs
apps/cli/src/app/: ctx.rs  mod.rs  msg.rs
apps/cli/src/dbg/: doc.rs  gbd.rs  mod.rs  trace.rs  win.rs
apps/cli/src/emu/: ctx.rs  mod.rs  msg.rs
apps/cli/src/exe/: mod.rs
apps/cli/src/gui/: audio.rs  mod.rs
apps/ios/: .gitignore  .swift-format  .swiftformat  ABOUT.txt  Cargo.toml  Makefile  README.md  rust-toolchain.toml  uniffi.toml
apps/ios/Rugby/: ContentView.swift  Info.plist  RugbyApp.swift
apps/ios/Rugby.xcodeproj/: project.pbxproj
apps/ios/Rugby/AppIcon.icon/: icon.json
apps/ios/Rugby/Core/: Core.swift  GameBoy.swift
apps/ios/Rugby/Extra/: Atomic.swift  Board.swift  Build.swift  RingBuffer.swift  View.swift
apps/ios/Rugby/Files/: CREDITS.md  LICENSE-MIT
apps/ios/Rugby/Icons/: PaletteIcon.swift
apps/ios/Rugby/Metal/: DMG.metal  GBA.metal  GBC.metal  LCD.metal  Scale2x.metal  Scale3x.metal
apps/ios/Rugby/Model/: AppIcon.swift  Emulator.swift  Failure.swift  Game.swift  GameBoy.swift  Gamepad.swift  Library.swift  Options.swift  Palette.swift  Runtime.swift  Settings.swift
apps/ios/Rugby/Previews/: porklike.gb
apps/ios/Rugby/Types/: Palette.swift  Shader.swift  Speed.swift
apps/ios/Rugby/Views/: EmulatorView.swift  FailureView.swift  LibraryView.swift  MainView.swift  SettingsView.swift  WelcomeView.swift
apps/ios/pkg/: Package.swift
apps/ios/src/: cart.rs  err.rs  keys.rs  lib.rs
apps/ios/src/api/: audio.rs  cart.rs  joypad.rs  mod.rs  video.rs
apps/web/: .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  index.11tydata.js  index.html  main.js  package.json  style.css  tsconfig.json  vite.config.js
apps/web/css/: main.css
apps/web/css/font/: index.css
apps/web/pkg/: package.json
apps/web/public/: chiptune.js  manifest.json
apps/web/src/: app.ts  key.rs  lib.rs  lib.ts  rom.rs  style.css  util.ts
apps/web/src/api/: audio.rs  cart.rs  joypad.rs  mod.rs  video.rs
apps/web/src/emu/: cart.rs  mod.rs
apps/web/src/parts/: dialog.ts  screen.ts  switch.ts
apps/web/src/rugby/: dialog.ts  index.ts  rugby.ts  switch.ts
apps/web/www/: App.svelte  app.ts  chiptune.js  style.css
apps/web/www/lib/: Button.svelte  DPad.svelte  GameBoy.svelte  Insert.svelte  Joypad.svelte  Screen.svelte  Stereo.svelte
apps/web/www/rugby/: audio.ts  dialog.ts  index.ts  loader.ts  screen.ts  stereo.ts  switch.ts
arch/: Cargo.toml  README.md
arch/macros/: Cargo.toml
arch/macros/src/: lib.rs
arch/src/: blk.rs  clk.rs  lib.rs  reg.rs
arch/src/dev/: mod.rs  null.rs  rand.rs
arch/src/mem/: mod.rs  ram.rs  rom.rs
arch/src/mio/: mod.rs
arch/src/mio/bus/: imp.rs  mod.rs
arch/tests/: derive.rs
bind/swift/: Cargo.toml  Makefile  README.md
bind/swift/pkg/: Package.swift
bind/swift/src/: err.rs  lib.rs  log.rs
bind/swift/src/api/: audio.rs  cart.rs  joypad.rs  mod.rs  video.rs
bind/wasm/: Cargo.toml  README.md  package.json
bind/wasm/pkg/: package.json
bind/wasm/src/: lib.rs
bind/wasm/src/api/: audio.rs  cart.rs  joypad.rs  video.rs
cfg/: Cargo.toml
cfg/src/: lib.rs  val.rs
cfg/src/opt/: app.rs  emu.rs  mod.rs
core/: Cargo.toml  README.md
core/src/: arch.rs  emu.rs  io.rs  lib.rs  rev.rs  spec.rs
core/src/api/: audio.rs  cable.rs  cart.rs  joypad.rs  mod.rs  proc.rs  serial.rs  video.rs
core/src/api/core/: has.rs  imp.rs  mod.rs
core/src/api/part/: audio.rs  cable.rs  input.rs  joypad.rs  mod.rs  proc.rs  serial.rs  video.rs
core/src/cart/: head.rs  header.rs  mod.rs
core/src/cart/chip/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  none.rs
core/src/cart/mbc/: mbc1.rs  mod.rs
core/src/chip/: mod.rs
core/src/chip/apu/: ch1.rs  ch2.rs  ch3.rs  ch4.rs  mod.rs
core/src/chip/cpu/: mod.rs  reg.rs
core/src/chip/dma/: mod.rs
core/src/chip/irq/: mod.rs
core/src/chip/joy/: mod.rs
core/src/chip/pic/: mod.rs
core/src/chip/ppu/: dbg.rs  mod.rs  reg.rs
core/src/chip/sio/: mod.rs
core/src/chip/tma/: mod.rs  reg.rs
core/src/cpu/: mod.rs
core/src/dev/: mod.rs  readonly.rs  unmapped.rs
core/src/emu/: joypad.rs  mod.rs  screen.rs
core/src/hw/: audio.rs  dma.rs  joypad.rs  mod.rs  pic.rs  serial.rs  timer.rs
core/src/hw/apu/: mod.rs
core/src/hw/cart/: header.rs  mod.rs
core/src/hw/cpu/: mod.rs
core/src/hw/ppu/: dma.rs  mod.rs  pixel.rs  screen.rs  sprite.rs  tile.rs
core/src/model/: mod.rs
core/src/model/agb/: mod.rs
core/src/model/cgb/: mod.rs
core/src/model/dmg/: boot.rs  chip.rs  dbg.rs  io.rs  mem.rs  mmap.rs  mmio.rs  mod.rs  noc.rs  pcb.rs  rev.rs  soc.rs  tests.rs
core/src/parts/: boot.rs  dma.rs  joypad.rs  mod.rs  pic.rs  serial.rs  timer.rs
core/src/parts/apu/: ch1.rs  ch2.rs  ch3.rs  ch4.rs  mod.rs  reg.rs
core/src/parts/cart/: head.rs  header.rs  mod.rs
core/src/parts/joypad/: mod.rs  reg.rs
core/src/parts/pic/: mod.rs
core/src/util/: enumflag.rs  mod.rs
crates/chex/: Cargo.toml
crates/chex/src/: lib.rs  names.rs
extras/cfg/: Cargo.toml  README.md
extras/cfg/src/: env.rs  lib.rs  val.rs
extras/gbd/: Cargo.toml  README.md
extras/gbd/src/: exec.rs  lib.rs  prompt.rs
extras/pal/: Cargo.toml  README.md
extras/pal/src/: lib.rs
front/cli/: Cargo.toml
front/cli/src/: app.rs  cfg.rs  cli.rs  main.rs
gbd/: Cargo.toml  README.md
gbd/src/: exec.rs  lib.rs  prompt.rs
gbd/src/lang/: mod.rs  parse.pest  parse.rs
lib/retro/: Cargo.toml  README.md
lib/retro/src/: def.rs  dev.rs  env.rs  key.rs  lib.rs  loc.rs  mem.rs  pix.rs
remus/: Cargo.toml
remus/src/: lib.rs  reg.rs
remus/src/dev/: mod.rs  rand.rs
remus/src/mem/: mod.rs
(+549 files in other folders)
