[package]
name = "rugby"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
description = """
Cycle-accurate Game Boy emulation
"""
repository = { workspace = true }
license = { workspace = true }
keywords = ["gameboy", "emulator"]
categories = ["emulators"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chex = { workspace = true }
rugby-arch = { workspace = true }
rugby-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
png = { workspace = true }
rugby = { workspace = true, features = ["debug"] }

[features]
default = []
debug = ["rugby-core/debug"]

[profile.dev]
opt-level = 3

[workspace]
members = [
  "apis/*",
  "apps/*",
  "arch",
  "core",
  "crates/*",
  "lib/*",
]

[workspace.package]
authors = ["Zakhary Kaplan <me@zakhary.dev>"]
repository = "https://github.com/kaplanz/rugby"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
advise = "0.1.0"
anyhow = "1.0.95"
bfmt = { version = "0.1.0", path = "crates/bfmt" }
chex = { version = "0.1.0", path = "crates/chex" }
clap = { version = "4.5.28", features = ["derive"] }
constcat = "0.6.0"
either = "1.13.0"
hexd = { version = "0.1.0", path = "crates/hexd" }
itertools = "0.14.0"
log = "0.4.25"
num = "0.4.3"
png = "0.17.16"
rugby = { version = "0.1.0", path = "." }
rugby-arch = { version = "0.1.0", path = "arch" }
rugby-cfg = { version = "0.1.0", path = "apis/cfg" }
rugby-core = { version = "0.1.0", path = "core" }
rugby-gbd = { version = "0.1.0", path = "apis/gbd" }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.20"
wrange = { version = "0.1.0", path = "crates/wrange" }
xdir = "0.1.0"
