[package]
name = "rugby"
version = { workspace = true }
authors = { workspace = true }
edition = "2024"
description = """
Cycle-accurate Game Boy emulation
"""
repository = { workspace = true }
license = { workspace = true }
keywords = ["gameboy", "emulator"]
categories = ["emulators"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rugby-arch = { workspace = true }
rugby-core = { workspace = true }
rugby-cfg = { workspace = true, optional = true }
rugby-gbd = { workspace = true, optional = true }
rugby-pal = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
png = { workspace = true }
rugby = { workspace = true, features = ["debug"] }

[features]
default = []
debug = [
  "rugby-core/debug",
]
serde = [
  "rugby-core/serde"
]
extra = [
  "cfg",
  "gbd",
  "pal",
]
cfg = ["dep:rugby-cfg"]
gbd = ["dep:rugby-gbd"]
pal = ["dep:rugby-pal"]

[profile.dev]
opt-level = 3

[workspace]
members = [
  "apps/cli",
  "arch",
  "bind/*",
  "core",
  "crates/*",
  "extras/*",
  "lib/*",
]

[workspace.package]
version = "0.1.0"
authors = ["Zakhary Kaplan <me@zakhary.dev>"]
repository = "https://github.com/kaplanz/rugby"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
advise = "0.1.0"
anyhow = "1.0.99"
bfmt = { path = "crates/bfmt" }
chex = { path = "crates/chex" }
clap = { version = "4.5.45", features = ["derive"] }
constcat = "0.6.1"
either = "1.15.0"
hexd = { path = "crates/hexd" }
itertools = "0.14.0"
log = "0.4.27"
num = "0.4.3"
parking_lot = "0.12.4"
png = "0.17.16"
rugby = { path = "." }
rugby-arch = { path = "arch" }
rugby-cfg = { path = "extras/cfg" }
rugby-core = { path = "core" }
rugby-gbd = { path = "extras/gbd" }
rugby-pal = { path = "extras/pal" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"
toml = "0.9.5"
orng = { path = "crates/orng" }
xdir = "0.1.0"
