[package]
name = "rugby-arch"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.12.1"
rand = "0.9.2"
thiserror = { workspace = true }
