[package]
name = "rugby-cfg"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, optional = true, features = ["env"] }
rugby = { workspace = true }
serde = { workspace = true, optional = true }

[features]
clap = ["dep:clap"]
serde = ["dep:serde"]
