[package]
name = "rugby-core"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfmt = { workspace = true }
bitfield-struct = "0.11.0"
hexd = { workspace = true }
itertools = { workspace = true, optional = true }
log = { workspace = true }
rugby-arch = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = []
debug = ["dep:itertools"]
serde = ["dep:serde"]
