[package]
name = "rugby-core"
version = { workspace = true }
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfmt = { workspace = true }
bitfield-struct = "0.13.0"
facet = { workspace = true, optional = true }
hexd = { workspace = true }
itertools = { workspace = true, optional = true }
log = { workspace = true }
rugby-arch = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = []
debug = ["dep:itertools"]
facet = ["dep:facet"]
serde = ["dep:serde"]
