[package]
name = "remus"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.2.6"
log = { workspace = true }
num = { workspace = true }
rand = "0.8.5"
thiserror = { workspace = true }
