[package]
name = "rugby-gbd"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advise = { workspace = true }
bfmt = { workspace = true }
bytecount = { version = "0.6.8" }
displaydoc = { version = "0.2.5" }
hexd = { workspace = true }
indexmap = { version = "2.6.0" }
itertools = { workspace = true }
log = { workspace = true }
num = { workspace = true }
pest = { version = "2.7.14" }
pest_derive = { version = "2.7.14" }
png = { workspace = true }
rugby = { workspace = true, features = ["debug"] }
thiserror = { workspace = true }
wrange = { workspace = true }
