[package]
name = "rugby-cli"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rugby"
path = "src/main.rs"

[dependencies]
advise = { workspace = true }
annotate-snippets = "0.12.15"
anyhow = { workspace = true }
bfmt = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "env", "wrap_help"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
clap_complete = "4.6.0"
clap_mangen = "0.3.0"
constcat = { workspace = true }
ctrlc = { version = "3.5.2", features = ["termination"] }
either = { workspace = true }
facet-json = "0.44.5"
log = { workspace = true }
merge = { workspace = true }
minifb = "0.28.0"
num_enum = "0.7.6"
parking_lot = { workspace = true }
prettydiff = { version = "0.9.0", optional = true }
ringbuf = "0.4.8"
rubato = "2.0.0"
rugby = { workspace = true, features = ["facet", "cfg", "pal"] }
rustyline = { version = "18.0.0", optional = true }
supports-color = "3.0.2"
sysexits = "0.13.0"
tempfile = "3.27.0"
thiserror = { workspace = true }
tinyaudio = "2.0.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
xdir = { workspace = true }

[features]
default = [
  "gbd",
  "gfx",
  "trace",
]
debug = ["rugby/debug"]
gbd = [
  "debug",
  "rugby/gbd",
  "dep:rustyline",
]
gfx = ["debug"]
trace = [
  "debug",
  "dep:prettydiff",
]
