[package]
name = "rugby-ios"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rugby"
crate-type = ["cdylib"]

[dependencies]
uniffi = { version = "0.28.2", features = ["cli"] }
