[package]
name = "rugby-ios"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rugby"
crate-type = ["staticlib"]

[dependencies]
bfmt = { workspace = true }
log = { workspace = true }
rugby = { workspace = true }
thiserror = { workspace = true }
uniffi = { version = "0.29.3", features = ["cli"] }
