[package]
name = "rugby-web"
version = "0.1.0"
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rugby"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
