[package]
name = "rugby-web"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[lib]
name = "rugby"
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "1.0.0"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
js-sys = "0.3.77"
rugby = { workspace = true }
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
