[package]
name = "rugby-arch-macros"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.107"
quote = "1.0.47"
syn = "3.0.3"
