[package]
name = "rugby-swift"
version = { workspace = true }
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rugby"
crate-type = ["staticlib"]

[dependencies]
log = { workspace = true }
parking_lot = { workspace = true }
rugby = { workspace = true }
thiserror = { workspace = true }
uniffi = { version = "0.30.0", features = ["cli"] }
