[package]
name = "rugby-wasm"
version = { workspace = true }
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[lib]
name = "rugby"
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = "1.1.0"
getrandom = { version = "0.4.3", features = ["wasm_js"] }
js-sys = "0.3.103"
rugby = { workspace = true }
wasm-bindgen = "0.2.126"
