[package]
name = "chex"
version = "0.1.0"
authors.workspace = true
edition = "2021"
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
serde_with = "3.6.0"
thiserror = "1.0.56"
