[package]
name = "chex"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
serde_with = "3.16.1"
thiserror = { workspace = true }
