[package]
name = "rugby-cfg"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, optional = true, features = ["env"] }
rugby-core = { workspace = true }
rugby-pal = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }

[features]
default = [
  "clap",
  "serde",
  "toml",
]
clap = ["dep:clap"]
serde = [
  "rugby-pal/serde",
  "dep:serde",
]
toml = [
  "serde",
  "dep:toml",
]
