[package]
name = "rugby-cfg"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, optional = true, features = ["env"] }
facet = { workspace = true, optional = true }
merge = { workspace = true }
rugby-core = { workspace = true }
rugby-pal = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }

[features]
default = [
  "clap",
  "toml",
]
clap = ["dep:clap"]
facet = [
  "rugby-pal/facet",
  "dep:facet",
]
serde = [
  "rugby-pal/serde",
  "dep:serde",
]
toml = [
  "serde",
  "dep:toml",
]
