[package]
name = "rugby-gbd"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advise = { workspace = true }
bfmt = { workspace = true }
bytecount = { version = "0.6.9" }
displaydoc = { version = "0.2.5" }
hexd = { workspace = true }
indexmap = { version = "2.11.4" }
itertools = { workspace = true }
log = { workspace = true }
num = { workspace = true }
pest = { version = "2.8.2" }
pest_derive = { version = "2.8.2" }
png = { workspace = true }
rugby-arch = { workspace = true }
rugby-core = { workspace = true, features = ["debug"] }
thiserror = { workspace = true }
orng = { workspace = true }
