[package]
name = "rugby-pal"
version = "0.1.0"
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chex = { workspace = true }
facet = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
facet = [
  "chex/facet",
  "dep:facet",
]
serde = [
  "chex/serde",
  "dep:serde",
]
