[package]
name = "cli"
version = "0.1.0"
authors.workspace = true
edition = "2021"
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["doctor", "gbd", "view"]
debug = []
doctor = ["debug"]
gbd = [
    "debug",
    "dep:ctrlc",
    "dep:parking_lot",
    "dep:rustyline",
    "gameboy/gbd",
]
view = ["debug"]

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env", "wrap_help"] }
color-eyre = { version = "0.6.2" }
ctrlc = { version = "3.4.2", optional = true }
dirs = "5.0.1"
eyre = "0.6.11"
gameboy = { version = "0.1.0", path = "../.." }
log = "0.4.20"
minifb = "0.25.0"
parking_lot = { version = "0.12.1", optional = true }
remus = { git = "https://github.com/kaplanz/remus" }
rustyline = { version = "13.0.0", optional = true }
serde = { version = "1.0.195", features = ["derive"] }
sysexits = "0.7.10"
tell = { version = "0.1.0", path = "../../crates/tell" }
thiserror = "1.0.56"
toml = "0.8.8"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
