[package]
name = "libretro"
version = { workspace = true }
authors = { workspace = true }
edition = "2024"
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "retro"
crate-type = ["cdylib"]

[dependencies]
constcat = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rugby = { workspace = true, features = ["pal"] }
